<resources>
    <string name="app_name">Test 1</string>
    <string name="login">Логин</string>
    <string name="enter_username">Введите логин</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter">Вход</string>
    <string name="not_true_login">Не верный логин</string>
    <string name="not_true_password">Не верный пароль</string>
    <string name="number_a">Число а:</string>
    <string name="number_b">Число b:</string>
    <string name="enter_number_a">Введите число а:</string>
    <string name="enter_number_b">Введите число b:</string>
    <string name="result">Результат:</string>
    <string name="error_enter_number_a">Введите число а</string>
    <string name="error_enter_number_b">Введите число b</string>
    <string name="error_enter_number_a_b">Введите число а и b</string>
</resources>