<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99DEE6"
    tools:context=".CalculatorFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="8dp"
            android:text="@string/number_a" />

        <EditText
            android:id="@+id/number_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_number_a"
            android:inputType="number">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addition"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="+" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="-" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"

                android:text="*" />

            <Button
                android:id="@+id/division"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="/" />
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:text="@string/number_b" />

        <EditText
            android:id="@+id/number_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_number_b"
            android:inputType="number">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/result" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>